[package]
name = "hash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# blake2 = "0.10.6"
clap = { version = "4", features = ["derive"] }
digest = { version = "0.10.7", features = ["alloc"] }
md-5 = "0.10.6"
sha1 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"
